# nlp2026_program

./: .env  .gitignore  .markdownlint-cli2.jsonc  README.md  TODO.md  Taskfile.yml  _typos.toml  biome.json  extract.py  index.html  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  screenshot.avif  tsconfig.node.json  vite.config.ts  workshop.json
.github/workflows/: ci.yml
data_for_extraction/: invitedpapers.json  workshop.json  youtube.json
doc/: spec.md
public/: data.json  loading.avif  slack.json
scripts/: create-import-zoom-settings-url.mjs  create-import-zoom-settings-url.test.mjs  data-contract.test.mjs  stabilize_json.py
src/: App.tsx  main.tsx  vite-env.d.ts
src/components/: HighlightedText.tsx  PersonModal.test.tsx  PersonModal.tsx  PresentationCard.tsx  PresentationListItem.test.tsx  PresentationListItem.tsx  SessionCard.test.tsx  SessionCard.tsx  TimelineFilter.test.tsx  TimelineFilter.tsx
src/constants/: index.ts  network.ts
src/hooks/: useAppSettings.test.ts  useAppSettings.ts  useBookmarks.test.ts  useBookmarks.ts  useConferenceData.behavior.test.tsx  useConferenceData.test.ts  useConferenceData.ts  useSessionJump.ts
src/lib/: appDataBackup.test.ts  appDataBackup.ts  appDataExport.hashlist.test.ts  appDataExport.test.ts  appDataExport.ts  bookmarks.test.ts  bookmarks.ts  date.test.ts  date.ts  filters.test.ts  filters.ts  highlight.test.ts  highlight.ts  offlineCache.test.ts  offlineCache.ts  slack.test.ts  slack.ts  time.ts  zoom.test.ts  zoom.ts
src/locales/: ja.ts
tests/: test_extract_time_consistency.py
(+20 files in other folders)
